# vulkan-voxels

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
assets/: resources.json
cmake/: FindXCB.cmake  fmt.cmake  glm.cmake  json.cmake  stbimage.cmake
include/: config.h.in  config.hpp.in  format.h  journal.h  vulkan.h
src/client/: Application.cpp  Application.hpp  Block.cpp  Block.hpp  CMakeLists.txt  Camera.hpp  Chunk.cpp  Chunk.hpp  Content.hpp  Event.hpp  Frustum.hpp  ImageLoader.cpp  ImageLoader.hpp  Journal.cpp  Journal.hpp  Json.hpp  Math.hpp  Plane.hpp  Renderer.cpp  Renderer.hpp  Storage.hpp  Tags.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Vertex.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  main.cpp
src/clients/: application.hpp  client.cpp  main.cc  syswm.h  xcbwm.cc
